@@ -1,5 +1,0 @@
-#ifndef NDEBUG
-#define MACH_ASSERT 1
-#else
-#define MACH_ASSERT 0
-#endif
